# Open-Claude-Code

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  IMPROVEMENTS.md  MANIFEST.in  README.md  occ.example.yml  pyproject.toml
.github/workflows/: ci.yml
src/open_claude_code/: __init__.py  agent.py  config.py  context.py  main.py  modes.py  system_prompt.py
src/open_claude_code/events/: __init__.py  bus.py  types.py
src/open_claude_code/listeners/: __init__.py  approval.py  logging.py  ui.py
src/open_claude_code/mcp/: __init__.py  client.py
src/open_claude_code/middleware/: __init__.py  mcp.py  memory.py  skills.py
src/open_claude_code/planning/: __init__.py  middleware.py  store.py  tools.py
src/open_claude_code/plugins/: __init__.py  manager.py
src/open_claude_code/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py  registry.py
src/open_claude_code/skills/: __init__.py  loader.py
src/open_claude_code/subagents/: __init__.py  manager.py
src/open_claude_code/tools/: __init__.py  edit_file.py  find_files.py  grep_search.py  list_directory.py  load_skill.py  read_file.py  read_url.py  result.py  run_shell.py  sandbox.py  spawn_agent.py  web_search.py  write_file.py
tests/: test_agent.py  test_config.py  test_events.py  test_memory_caching.py  test_middleware.py  test_modes.py  test_phase78.py  test_planning.py  test_providers.py  test_skills.py  test_streaming.py  test_tool_result_context.py  test_tools.py
