[project]
name = "open-claude-code"
version = "0.1.0"
description = "An open-source AI coding agent — multi-model, multi-mode, extensible"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "duckduckgo-search>=7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
all = ["google-genai>=1.0.0"]

[project.scripts]
occ = "open_claude_code.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_claude_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
